added bot, it's working but not sending flag

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,5 +8,8 @@
     </head>
     <body>
         <script type="module" src="./frontend.js"></script>
+        <dialog id="chal_desc">
+            <button>close</button>
+        </dialog>
     </body>
 </html>
